
2012-11-22  Michael Bouchaud (yoz)

        * fix elm_flip to show only one face at a time

2012-11-22  ChunEon Park (Hermet)

        * Lets remove contents regardless of the preseve_on_set if naviframe is
        deleted.

2012-11-22  Shilpa Sigh (shilpa.singh@samsung.com)

        * Clear the title contents when naviframe item is deleted.

2012-11-22  Thiep Ha 

        * Fixed entry to enable have_selection only when a text is actually selected.

2012-11-23  ChunEon Park (Hermet)

        * Free the text parts of the naviframe item when item is deleted.

2012-11-26  Daniel Zaoui and Yaakov Goldberg

        * Porting of Elementary to Eo

2012-11-29  ChunEon Park (Hermet)

        * Fix the mapbuf to update it's contents correctly, even if they go
        outside of the buffer

2012-11-29  Thiep Ha

        * Entry: add a mode to clear selection when entry loose focus.

2012-11-30  ChunEon Park (Hermet)

        * Fix the naviframe to resize it's items which are inserted.

2012-11-30  ChunEon Park (Hermet)

        * emit the signals for content_set/unset text_set/unset one time!

2012-12-02  Mike Blumenkrantz

        * Fix case where tooltips could go offscreen unnecessarily.

2012-12-03 Gustavo Sverzut Barbieri (k-s)

	* Add elm_need_edbus(), deprecate elm_need_e_dbus(), integrating
	edbus (v2).

2012-12-04  Cedric Bail

	* Fix a possible divide by zero in els_scroller animator.

2012-12-04  Murilo Pinoti Belluzzo (mbelluzzo)

	* Add elm_app_name_set/get(): Formal application name string.
	* Add elm_app_destkop_entry_set/get(): Path to '.desktop' file.

2012-12-04  Gwanglim Lee

        * Add window profile set/get API in elm_win

2012-12-05  Cedric Bail

	* Fix uninitialized data path in elm_flip, elm_gesture_layer,
	elm_interface_scrollable, els_scroller.

2012-12-05  Shilpa Onkar Singh (shilpa.singh@samsung.com)

	* Fix naviframe to not send hide signals even before item doens't created
  	yet.