@@ -121,6 +121,7 @@ test_slider.c \
 test_slideshow.c \
 test_spinner.c \
 test_store.c \
+test_sys_notify.c \
 test_table.c \
 test_thumb.c \
 test_toolbar.c \
